syntax = "proto3";
package deals.pb;

option java_multiple_files = true;
option java_package = "io.textile.filecoin.deals.pb";
option java_outer_classname = "FilecoinDeals";
option objc_class_prefix = "TTE";

message DealConfig {
	string miner = 1;
	uint64 epochPrice = 2;
}

message DealInfo {
	string proposalCid = 1;
	uint64 stateID = 2;
	string stateName = 3;
	string miner = 4;

	bytes pieceCID = 5;
	uint64 size = 6;

	uint64 pricePerEpoch = 7;
	uint64 duration = 8;
}

message StoreParams {
    string address = 1;
    repeated DealConfig dealConfigs = 2;
    uint64 duration = 3;
}

message StoreRequest {
    oneof payload {
        StoreParams storeParams = 1;
        bytes chunk = 2;
    }
}

message StoreReply {
    string dataCid = 1;
    repeated string proposalCids = 2;
    repeated DealConfig failedDeals = 3;
}

message WatchRequest {
    repeated string proposals = 1;
}

message WatchReply {
    DealInfo dealInfo = 1;
}

message RetrieveRequest {
    string address = 1;
    string cid = 2;
}

message RetrieveReply {
    bytes chunk = 1;
}

service API {
    rpc Store(stream StoreRequest) returns (StoreReply) {}
    rpc Watch(WatchRequest) returns (stream WatchReply) {}
    rpc Retrieve(RetrieveRequest) returns (stream RetrieveReply) {}
}
